feat(vagasRoutes,-userRoutes): add default filters for vacaciones
add filters and outher user infos
